test/should_pass/annot_001.grg
rule r {
	pattern {
		x[prio=10000] : Node;		
	}
	modify {
	}
}

