test/should_fail/annot_008.grg
actions annot_008;

rule r {
	pattern {
		[prio=42] : ;
	}
	modify {}
}
